feat: add xtls-rprx-vision and utls fingerprint setting

--- a/src/plugins/protocols/ui/outbound/vless.ui
+++ b/src/plugins/protocols/ui/outbound/vless.ui
@@ -113,6 +113,11 @@
        <string notr="true">xtls-rprx-origin-udp443</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string notr="true">xtls-rprx-vision</string>
+      </property>
+     </item>
     </widget>
    </item>
   </layout>
